--- a/第二次作业+罗迎元+2019211529/level2/1 使用prompt接收用户输入的数字/index.html
+++ b/第二次作业+罗迎元+2019211529/level2/1 使用prompt接收用户输入的数字/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Level2-1</title>
-    <script type="text/javascript" src="./index.js"></script>
+    <script type="text/javascript" src="./script.js"></script>
 </head>
 
 <body>
