--- a/JS第三次课作业+罗迎元+2019211529/level1/index.html
+++ b/JS第三次课作业+罗迎元+2019211529/level1/index.html
@@ -10,7 +10,19 @@
 </head>
 
 <body>
-
+    <div class="container">
+        <div class="txt">Hello, world!</div>
+        <div class="btns-color">
+            <button value="red" class="setcolor">红色</button>
+            <button value="green" class="setcolor">绿色</button>
+            <button value="blue" class="setcolor">蓝色</button>
+        </div>
+        <div class="btns-front">
+            <button value="bigger" class="setfront">变大</button>
+            <button value="default" class="setfront">默认</button>
+            <button value="smaller" class="setfront">变小</button>
+        </div>
+    </div>
     <script type="text/javascript" src="./script.js"></script>
 </body>
 
