--- a/JS第三次课作业+罗迎元+2019211529/level2/index.html
+++ b/JS第三次课作业+罗迎元+2019211529/level2/index.html
@@ -1,17 +1,48 @@
+</html>
 <!DOCTYPE html>
 <html lang="en">
 
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Level_2</title>
-    <link rel="stylesheet" href="./index.css">
+    <title>Document</title>
+    <style>
+        li {
+            color: transparent;
+        }
+    </style>
 </head>
 
 <body>
-
-    <script type="text/javascript" src="./script.js"></script>
+    <ul>
+        <li>1</li>
+        <li>2</li>
+        <li>3</li>
+        <li>4</li>
+        <li>5</li>
+        <li>6</li>
+        <li>7</li>
+        <li>8</li>
+        <li>9</li>
+        <li>10</li>
+    </ul>
+    <script>
+        let lis = document.querySelectorAll('li');
+        let len = lis.length;
+        for (let i = 0; i < len; i++) {
+            if (i % 2 != 0) {
+                lis[i].style.color = 'red';
+            } else {
+                lis[i].style.color = 'green';
+            }
+        }
+        for (var i = 0; i < len; i++) {
+            lis[i].onclick = function () {
+                let text = this.innerHTML;
+                console.log(text);
+            }
+        }
+    </script>
 </body>
 
 </html>
