--- a/JS第三次课作业+罗迎元+2019211529/level3/index.html
+++ b/JS第三次课作业+罗迎元+2019211529/level3/index.html
@@ -10,7 +10,13 @@
 </head>
 
 <body>
+    <div class="input_text">
+        <input type="text" class="text">
+        <button class="btn1">发送</button>
+    </div>
+    <ul class="output">
 
+    </ul>
     <script type="text/javascript" src="./script.js"></script>
 </body>
 
