--- a/Ajax+ES6+罗迎元+2019211529/Level2/index.html
+++ b/Ajax+ES6+罗迎元+2019211529/Level2/index.html
@@ -11,7 +11,9 @@
 </head>
 
 <body>
-
+    <button class="btn">封装为方法</button>
+    <div class="ntc">推荐歌单 ></div>
+    <ul class="list"></ul>
 </body>
 
 </html>
