--- a/Ajax+ES6+罗迎元+2019211529/Level3/index.html
+++ b/Ajax+ES6+罗迎元+2019211529/Level3/index.html
@@ -5,13 +5,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Level_3</title>
+    <title>Level_3_封装为类</title>
     <link rel="stylesheet" href="./style.css">
     <script type="text/javascript" src="./script.js"></script>
 </head>
 
 <body>
-
+    <div class="ntc">推荐歌单 ></div>
+    <ul class="list"></ul>
 </body>
 
 </html>
