--- a/移动端+罗迎元+2019211529/level1/index.html
+++ b/移动端+罗迎元+2019211529/level1/index.html
@@ -21,12 +21,7 @@
         <div class="date">hello</div>
         <img class="icon" src="./icon/right.png" alt="">
     </div>
-    <ul class="content">
-        <li>
-            <p>时间</p>
-            <p>事件</p>
-        </li>
-    </ul>
+    <ul class="content"></ul>
     <!-- <img class="icon up" src="./icon/up.png" alt=""> -->
 </body>
 
