--- a/移动端+罗迎元+2019211529/level1/index.html
+++ b/移动端+罗迎元+2019211529/level1/index.html
@@ -22,7 +22,10 @@
         <img class="icon" src="./icon/right.png" alt="">
     </div>
     <ul class="content"></ul>
-    <!-- <img class="icon up" src="./icon/up.png" alt=""> -->
+    <div class="reset">
+        <img class="icon" src="./icon/up.png" alt="">
+    </div>
+    <script type="text/javascript" src="./reset-btn.js"></script>
 </body>
 
 </html>
