写累了，保存一下

--- a/JS复习及补充/level4/pages/index.html
+++ b/JS复习及补充/level4/pages/index.html
@@ -20,10 +20,10 @@
             <div class="city-now"><img src="../icons/加.svg" alt="" class="icon btn-1"><span value="101040100">重庆市</span>
             </div>
             <div class="epidemic">
-                <a href="https://html5.moji.com/tpd/gzbd/index.html" class="btn-1 icon-yellow"><img
+                <a href="https://html5.moji.com/tpd/gzbd/index.html" class="btn-1 icon-1 icon-yellow"><img
                         src="../icons/病毒.svg" alt="" class="icon">疫情咨询</a>
                 <a href="https://html5.moji.com/tpd/safetravel/safetravel.html?t=1580984067263"
-                    class="btn-1 icon-blue"><img src="../icons/口罩.svg" alt="" class="icon">安全出行</a>
+                    class="btn-1 icon-1 icon-blue"><img src="../icons/口罩.svg" alt="" class="icon">安全出行</a>
             </div>
             <div class="city-weather clearflex">
                 <span class="now-text">多云</span>
@@ -32,12 +32,13 @@
                 <span class="now-humidity">湿度47%</span>
             </div>
             <span class="now-notice">略微偏凉，还是蛮舒适的。</span>
-            <a href="#" class="air-quality  icon-yellow btn-1"><img src="../icons/树叶.svg" alt="" class="icon">89 良</a>
+            <a href="#" class="now-air-quality btn-1 icon-1"><img src="../icons/树叶.svg" alt="" class="icon"><span>89
+                    良</span></a>
         </div>
         <!-- 头部 head end -->
         <!-- 今日明日详细天气情况 detail start -->
         <div class="detail">
-            <div class="todaily-wearther">
+            <div class="today-weather">
                 <div class="this-daily">
                     今天
                     <span class="daily-category">良</span>
@@ -46,7 +47,7 @@
                 <div class="daily-text">小雨</div>
                 <img src="../icons/天气-小雨.svg" alt="" class="daily-icon weather-icon">
             </div>
-            <div class="tomarrow-wearther">
+            <div class="tomorrow-weather">
                 <div class="this-daily">
                     明天
                     <span class="daily-category">良</span>
