--- a/JS复习及补充/level4/pages/index.html
+++ b/JS复习及补充/level4/pages/index.html
@@ -27,7 +27,7 @@
             </div>
             <div class="city-weather clearflex">
                 <span class="now-text">多云</span>
-                <span class="now-temp">16</span><span>°</span>
+                <div class="now-temp">18</div><span>°</span>
                 <span class="now-wind">西南0级</span>
                 <span class="now-humidity">湿度47%</span>
             </div>
@@ -41,7 +41,7 @@
             <div class="today-weather">
                 <div class="this-daily">
                     今天
-                    <span class="daily-category">良</span>
+                    <span class="daily-category air-quality">良</span>
                 </div>
                 <div class="daily-temp">10 / 12°</div>
                 <div class="daily-text">小雨</div>
@@ -50,7 +50,7 @@
             <div class="tomorrow-weather">
                 <div class="this-daily">
                     明天
-                    <span class="daily-category">良</span>
+                    <span class="daily-category air-quality">良</span>
                 </div>
                 <div class="daily-temp">10 / 12°</div>
                 <div class="daily-text">小雨</div>
