--- a/JS复习及补充/level4/pages/index.html
+++ b/JS复习及补充/level4/pages/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="../style/style.css">
     <link rel="stylesheet" href="../style/index-stayle.css">
     <link rel="stylesheet" href="../style/search-style.css">
+    <script src="http://mockjs.com/dist/mock.js"></script>;
     <title>CSA天气</title>
 </head>
 
@@ -115,12 +116,7 @@
             <ul>
                 <li>热搜城市</li>
             </ul>
-            <ul class="city-list">
-                <li>重庆市(mine)</li>
-                <li>重庆市(mine)</li>
-                <li>重庆市(mine)</li>
-                <li>重庆市(mine)</li>
-            </ul>
+            <ul class="city-list"></ul>
         </div>
         <!-- 热搜城市 end -->
     </div>
