--- a/test.html
+++ b/test.html
@@ -1,32 +1,16 @@
-text : document.querySelector(".now-text"),
-temp : document.querySelector(".now-temp"),
-wind : document.querySelector(".now-wind"),
-humidity : document.querySelector(".now-humidity"),
-notice : document.querySelector(".now-notice"),
-air_quality : document.querySelector(".now-air-quality"),
+<!DOCTYPE html>
+<html lang="en">
 
-today_temp : document
-.querySelector(".today-weather")
-.querySelector(".daily-temp"),
-today_text : document
-.querySelector(".today-weather")
-.querySelector(".daily-text"),
-today_air : document
-.querySelector(".today-weather")
-.querySelector(".daily-category"),
-today_icon : document
-.querySelector(".today-weather")
-.querySelector(".weather-icon"),
-// 明天
-tomorrow_temp : document
-.querySelector(".tomorrow-weather")
-.querySelector(".daily-temp"),
-tomorrow_text : document
-.querySelector(".tomorrow-weather")
-.querySelector(".daily-text"),
-tomorrow_air : document
-.querySelector(".tomorrow-weather")
-.querySelector(".daily-category"),
-tomorrow_icon : document
-.querySelector(".tomorrow-weather")
-.querySelector(".weather-icon"),
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+
+<body>
+
+    <script type="module" src="./test.js"></script>
+</body>
+
+</html>
