搜索框搜索城市

--- a/JS复习及补充/level4/pages/index.html
+++ b/JS复习及补充/level4/pages/index.html
@@ -86,6 +86,7 @@
             <img src="../icons/返回.svg" alt="" class="icon icon-large">
             <input type="text" placeholder="请输入城市名">
         </div>
+        <ul class="search-list"></ul>
         <!-- 返回键以及搜索框 end -->
         <!-- 当前城市 start -->
         <div class="current-city">
