搜索历史添加

--- a/JS复习及补充/level4/pages/index.html
+++ b/JS复习及补充/level4/pages/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="../style/style.css">
     <link rel="stylesheet" href="../style/index-stayle.css">
     <link rel="stylesheet" href="../style/search-style.css">
-    <script src="http://mockjs.com/dist/mock.js"></script>;
+    <script src="http://mockjs.com/dist/mock.js"></script>
     <title>CSA天气</title>
 </head>
 
@@ -63,7 +63,7 @@
                         style="margin-left: 0.2rem;"></div>
                 <!-- style="display:none;" -->
                 <div class="hour-temp">heelo</div>
-                <div class="hour-wind" style="display:none;">fdsgfdssg</div>
+                <div class="hour-wind">fdsgfdssg</div>
             </div>
         </div>
         <!-- 今日明日详细天气情况 detail end -->
@@ -94,7 +94,7 @@
                 <li>当前城市</li>
             </ul>
             <ul class="city-list">
-                <li>重庆市(mine)</li>
+                <li>重庆(mine)</li>
             </ul>
         </div>
         <!-- 当前城市 end -->
@@ -104,12 +104,7 @@
                 <li>添加记录</li>
                 <li class="del-city">删除</li>
             </ul>
-            <ul class="city-list">
-                <li>重庆市(mine)</li>
-                <li>重庆市(mine)</li>
-                <li>重庆市(mine)</li>
-                <li>重庆市(mine)</li>
-            </ul>
+            <ul class="city-list"></ul>
         </div>
         <!-- 添加记录 end -->
         <!-- 热搜城市 start -->
