完成24小时的风力/温度切换

--- a/JS复习及补充/level4/pages/index.html
+++ b/JS复习及补充/level4/pages/index.html
@@ -59,6 +59,10 @@
             </div>
             <div class="daily-info">
                 <div class="daily-sunset">日落18:30</div>
+                <div class="menu-select">
+                    <span class="menu-select-selecting">温度</span>
+                    <span>风力</span>
+                </div>
                 <div class="daily-menu">24小时<img src="../icons/收起-线性圆框.svg" alt="" class="weather-icon"
                         style="margin-left: 0.2rem;"></div>
                 <!-- style="display:none;" -->
