--- a/JS复习及补充/level4/pages/index.html
+++ b/JS复习及补充/level4/pages/index.html
@@ -77,9 +77,7 @@
         </div>
         <!-- 一周天气简报 weak-wearther end -->
         <!-- 出行建议 tips start -->
-        <div class="tips">
-
-        </div>
+        <ul class="tips"></ul>
         <!-- 出行建议 tips end -->
     </div>
     <!-- 主页面 end -->
