--- a/JS复习及补充/level4/pages/index.html
+++ b/JS复习及补充/level4/pages/index.html
@@ -65,8 +65,8 @@
                 <div class="daily-menu">24小时<img src="../icons/收起-线性圆框.svg" alt="" class="weather-icon"
                         style="margin-left: 0.2rem;"></div>
                 <!-- style="display:none;" -->
-                <div class="hour-temp">heelo</div>
-                <div class="hour-wind">fdsgfdssg</div>
+                <div class="hour-temp">hello</div>
+                <div class="hour-wind">world</div>
             </div>
         </div>
         <!-- 今日明日详细天气情况 detail end -->
