完成week栏目（除画图）

--- a/JS复习及补充/level4/pages/index.html
+++ b/JS复习及补充/level4/pages/index.html
@@ -75,11 +75,11 @@
             </div>
         </div>
         <!-- 今日明日详细天气情况 detail end -->
-        <!-- 一周天气简报 weak-wearther start -->
-        <div class="weak-wearther">
-
+        <!-- 一周天气简报 weak-weather start -->
+        <div class="week-weather">
+            <div id="week" class="week-charts"></div>
         </div>
-        <!-- 一周天气简报 weak-wearther end -->
+        <!-- 一周天气简报 weak-weather end -->
         <!-- 出行建议 tips start -->
         <ul class="tips"></ul>
         <!-- 出行建议 tips end -->
@@ -129,7 +129,6 @@
     <script type="text/javascript" src="../script/script-index.js"></script>
     <script type="text/javascript" src="../script/script-search.js"></script>
     <script type="text/javascript" src="../script/mock.js"></script>
-    <!-- <script type="text/javascript" src="../script/mychart.js"></script> -->
 </body>
 
 </html>
