--- a/JS复习及补充/level4/script/test.html
+++ b/JS复习及补充/level4/script/test.html
@@ -7,12 +7,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://cdn.staticfile.org/echarts/5.3.0/echarts.min.js"></script>
     <title>Document</title>
+    <link rel="stylesheet" href="./test.css">
 </head>
 
 <body>
-    <div id="wind" class="hour-wind" style="width: 100%;height:400px;"></div>
-    <div id="temp" class="hour-temp" style="width: 100%;height:400px;"></div>
-
+    <div class="week-weather clearflex">
+        <div id="week" class="week-charts"></div>
+    </div>
     <script data-main="./test.js" src="./require.js"></script>
     <script type="text/javascript" src="./test.js"></script>
 </body>
