--- a/8-Nodejs入门/井字棋2.0/index.html
+++ b/8-Nodejs入门/井字棋2.0/index.html
@@ -111,7 +111,6 @@
     <script>
         // 实现功能
         // 井字棋游戏逻辑
-
         const select_btn = document.querySelectorAll(".cell");
         const game_btn = {
             start: document.querySelector(".connect-btn"),
@@ -325,6 +324,9 @@
             }
         }
         // 更换游戏玩家 end
+        function linkSocket() {
+            
+        }
     </script>
 </body>
 
