井字棋完成

--- a/8-Nodejs入门/井字棋4.0/index.html
+++ b/8-Nodejs入门/井字棋4.0/index.html
@@ -11,7 +11,7 @@
 
 <body>
     <div class="container clearflex">
-        <div class="text-content">hello world!</div>
+        <div class="text-content">点击加入游戏</div>
         <div class="game-screen">
             <div class="cell" id="chess0"></div>
             <div class="cell" id="chess1"></div>
