--- a/8-Nodejs入门/井字棋3.0/index.html
+++ b/8-Nodejs入门/井字棋3.0/index.html
@@ -10,7 +10,7 @@ and open the template in the editor.
     <title>Tic Tac Toe</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel='stylesheet' href='./style.css'>
+    <link rel="stylesheet" href="./style.css">
 </head>
 
 <body>
@@ -22,7 +22,7 @@ and open the template in the editor.
         <input id="serverIp">
         <button id="leave">Leave Game</button>
     </footer>
-    <script src='./game.js' type='text/javascript'></script>
+    <script src="./game.js" type="text/javascript"></script>
 </body>
 
 </html>
