--- a/10-HTTP/level1/static/pages/login.html
+++ b/10-HTTP/level1/static/pages/login.html
@@ -13,10 +13,10 @@
     <div class="container">
         <h1>登录</h1>
         <label for="user">账号：
-            <input type="text">
+            <input type="text" class="user">
         </label>
         <label for="password">密码：
-            <input type="password">
+            <input type="password" class="psw">
         </label>
         <div class="btn">
             <button class="login">登录</button>
