完成登陆注册

--- a/10-HTTP/level1/static/pages/login.html
+++ b/10-HTTP/level1/static/pages/login.html
@@ -20,7 +20,7 @@
         </label>
         <div class="btn">
             <button class="login">登录</button>
-            <a href="http://127.0.0.1/sign">注册</a>
+            <button class="sign">注册</button>
         </div>
     </div>
     <script type="text/javascript" src="../script/ajax.js"></script>
