--- a/10-HTTP/level1/static/pages/sign.html
+++ b/10-HTTP/level1/static/pages/sign.html
@@ -13,14 +13,14 @@
     <div class="container">
         <h1>注册</h1>
         <label for="user">账号：
-            <input type="text">
+            <input type="text" class="user">
         </label>
         <label for="password">密码：
-            <input type="password">
+            <input type="password" class="psw">
         </label>
         <div class="btn">
             <button class="submit">确定</button>
-            <a href="http://127.0.0.1/">返回</a>
+            <button class="login">返回</button>
         </div>
     </div>
     <script type="text/javascript" src="../script/ajax.js"></script>
