--- a/10-HTTP/level2-express-v3/static/pages/sign.html
+++ b/10-HTTP/level2-express-v3/static/pages/sign.html
@@ -5,13 +5,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>登录</title>
+    <title>注册</title>
     <link rel="stylesheet" href="../style/style.css">
 </head>
 
 <body>
     <div class="container">
-        <h1>登录</h1>
+        <h1>注册</h1>
         <label for="user">账号：
             <input type="text" class="user">
         </label>
@@ -19,13 +19,12 @@
             <input type="password" class="psw">
         </label>
         <div class="btn">
-            <button class="login">登录</button>
-            <button class="sign">注册</button>
+            <button class="submit">确定</button>
+            <button class="login">返回</button>
         </div>
     </div>
-    <!-- <script type="module" src="../script/ajax2.js"></script> -->
     <script type="text/javascript" src="../script/ajax.js"></script>
-    <script type="text/javascript" src="../script/login.js"></script>
+    <script type="text/javascript" src="../script/sign.js"></script>
 </body>
 
 </html>
