搜索框样式完成

--- a/final-project/test/a标签样式.html
+++ b/final-project/test/a标签样式.html
@@ -15,14 +15,15 @@
     .red {
       color: #646464;
     }
-    
-    .red:hover{
+
+    .red:hover {
       color: #ff2838;
     }
   </style>
 </head>
 
 <body>
+  <!-- TODO:项目结束记得删去 -->
   <a href="#" class="red">hello</a>
 </body>
 
